--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "express-app",
+  "name": "express",
   "version": "0.0.0",
-  "description": "",
-  "main": "app.js",
+  "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "author": "",
-  "license": "BSD-2-Clause",
   "dependencies": {
-    "express": "~4.13.3",
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "jade": "~1.11.0",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0",
     "sequelize": "~3.15.1",
-    "sqlite3": "~3.1.1",
-    "sequelize-cli": "~2.2.1"
+    "sequelize-cli": "~2.2.1",
+    "sqlite3": "~3.1.1"
   }
 }
