--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.12.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
+    "passport": "~0.3.2",
+    "passport-local": "~1.0.0",
     "sequelize": "~3.15.1",
     "sequelize-cli": "~2.2.1",
-    "sqlite3": "~3.1.1",
-    "passport-local": "~1.0.0",
-    "passport": "~0.3.2"
+    "serve-favicon": "~2.3.0",
+    "sqlite3": "~3.1.1"
   }
 }
