--- a/package.json
+++ b/package.json
@@ -7,14 +7,22 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "bookshelf": "^0.9.1",
+    "checkit": "^0.6.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "^1.12.1",
     "jade": "~1.11.0",
+    "knex": "^0.9.0",
+    "moment": "^2.11.0",
     "morgan": "~1.6.1",
     "passport": "~0.3.2",
     "passport-local": "~1.0.0",
     "serve-favicon": "~2.3.0",
+    "sqlite3": "^3.1.1"
+  },
+  "engines": {
+    "node": ">=0.12.9 <4.0.0"
   }
 }
