--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "~1.13.2",
     "bookshelf": "^0.9.1",
+    "bower": "^1.7.2",
     "checkit": "^0.6.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
