--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "^1.12.1",
+    "i18n-node": "^2.1.5",
     "jade": "~1.11.0",
     "knex": "^0.9.0",
     "less-middleware": "^2.0.1",
